# wayfire

./: .gitmodules  meson.build  minimize_window.py  wf_gtk_global_menu.py
metadata/: core.xml  meson.build  move.xml  resize.xml  scale-decor.xml  scale.xml  scale_test.xml  xdg-activation.xml
plugins/animate/: squeezimize.hpp  unmapped-view-node.hpp
plugins/animate/fire/: fire.cpp
plugins/blur/: blur-base.cpp  blur.cpp  blur.hpp
plugins/common/: move-drag-interface.cpp  workspace-wall.cpp
plugins/common/wayfire/plugins/common/: geometry-animation.hpp  move-drag-interface.hpp  preview-indication.hpp  simple-text-node.hpp  workspace-wall.hpp
plugins/cube/: cube.cpp
plugins/decor/: deco-layout.cpp  deco-layout.hpp  deco-subsurface.cpp
plugins/grid/: grid.cpp
plugins/grid/wayfire/plugins/: crossfade.hpp
plugins/ipc/: ipc-activator.hpp  stipc.cpp
plugins/ipc-rules/: ipc-events.hpp
plugins/protocols/: ext-toplevel.cpp  foreign-toplevel.cpp  gtk-shell.cpp  gtk-shell.hpp  kde-appmenu.cpp  kde-appmenu.hpp  meson.build  session-lock.cpp  wayfire-shell.cpp  xdg-activation.cpp
plugins/scale/: meson.build  scale-decor.cpp  scale-title-filter.cpp  scale-title-overlay.cpp  scale-title-overlay.hpp  scale.cpp
plugins/scale/wayfire/plugins/: scale-signal.hpp  scale-transform.hpp
plugins/single_plugins/: command.cpp  expo.cpp  meson.build  move.cpp  oswitch.cpp  place.cpp  resize.cpp  scale_ipc_filter.cpp  scale_test.cpp  switcher.cpp  vswipe.cpp  wlr-workspaces.cpp  zoom.cpp
plugins/tile/: tile-dragging.hpp  tile-ipc.hpp  tree-controller.cpp  tree-controller.hpp  tree.cpp  tree.hpp
plugins/vswitch/: vswitch.cpp
plugins/window-rules/: view-action-interface.cpp
plugins/wobbly/: wobbly.cpp
plugins/wobbly/wayfire/plugins/wobbly/: wobbly-signal.hpp
proto/: meson.build
src/: debug.cpp  geometry.cpp  region.cpp  render.cpp
src/api/wayfire/: core.hpp  geometry.hpp  opengl.hpp  output.hpp  plugin.hpp  region.hpp  render-manager.hpp  render.hpp  scene-operations.hpp  scene-render.hpp  scene.hpp  signal-definitions.hpp  toplevel-view.hpp  toplevel.hpp  view-transform.hpp  view.hpp  vulkan.hpp  window-manager.hpp
src/api/wayfire/nonstd/: wlroots-full.hpp  wlroots.hpp
src/api/wayfire/unstable/: translation-node.hpp  wlr-surface-node.hpp
src/core/: core.cpp  opengl.cpp  output-layout.cpp  plugin-loader.cpp  scene.cpp  vulkan.cpp  window-manager.cpp  xdg-output-management.cpp
src/core/seat/: cursor.cpp  drag-icon.cpp  drag-icon.hpp  input-method-popup.cpp  pointer.cpp
src/output/: output-impl.hpp  output.cpp  render-manager.cpp  workspace-impl.cpp  workspace-stream.cpp
src/view/: compositor-view.cpp  layer-shell.cpp  toplevel-node.cpp  toplevel-node.hpp  toplevel-view.cpp  translation-node.cpp  view-3d.cpp  view-impl.cpp  view-impl.hpp  view.cpp  wlr-subsurface-controller.cpp  wlr-surface-node.cpp  xdg-shell.cpp
src/view/layer-shell/: layer-shell-node.cpp  layer-shell-node.hpp  layer-shell.cpp
src/view/xdg-shell/: xdg-toplevel-view.cpp  xdg-toplevel.cpp  xdg-toplevel.hpp
src/view/xwayland/: xwayland-helpers.cpp  xwayland-surface.cpp  xwayland-toplevel-view.hpp  xwayland-toplevel.cpp  xwayland-toplevel.hpp  xwayland-unmanaged-view.hpp
test/: meson.build
test/geometry/: region_test.cpp
test/plugins/: meson.build
test/plugins/command/: command-plugin-test.cpp  meson.build
test/protocol/: meson.build  scaling-test.cpp  xdg-shell-test.cpp
test/support/: headless-core-harness.cpp  headless-core-harness.hpp  ipc-client.cpp  ipc-client.hpp  wayland-client-utils.cpp  wayland-client-utils.hpp  wayland-xdg-client.cpp  wayland-xdg-client.hpp
